[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length=120
skip_gitignore = true

[tool.mypy]
mypy_path = [
  "fastapi_filter",
]
show_error_codes = true
check_untyped_defs = true
plugins = [
  "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = [
  "bson.objectid",
  "mongoengine.*",
  "uvicorn.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "fastapi-filter"
version = "0.5.2"
description = "FastAPI filter"
authors = ["Arthur Rio <arthur.rio44@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arthurio/fastapi-filter"
classifiers = [
    "Natural Language :: English",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
SQLAlchemy = {version = ">=1.4.36,<2.1.0", optional = true}
fastapi = ">=0.78,<0.93"
mongoengine = {version = ">=0.24.1,<0.27.0", optional = true}
pydantic = ">=1.10.0,<2.0.0"
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
Faker = "^17.0.0"
SQLAlchemy-Utils = "^0.40.0"
aiosqlite = "^0.18.0"
bandit = "^1.7.4"
black = "^23.1.0"
flake8 = "^5.0.4"
flake8-breakpoint = "^1.1.0"
flake8-builtins = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-simplify = "^0.19.3"
flynt = "^0.77"
greenlet = "^2.0.2"
httpx = "^0.23.3"
ipython = "^8.10.0"
isort = "^5.12.0"
mkdocs-material = "^9.0.12"
mypy = "^1.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.1.0"
pudb = "^2022.1.3"
pydantic = {extras = ["email"], version = "^1.10.0"}
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-pudb = "^0.7.0"
python-lsp-server = "^1.7.1"
requests = "^2.28.2"
tomli = "^2.0.1"
types-click = "^7.1.8"
types-setuptools = "^67.4.0"
typing-extensions = "^4.5.0"
uvicorn = "^0.20.0"

[tool.poetry.extras]
mongoengine = ["mongoengine"]
sqlalchemy = ["SQLAlchemy"]
all = ["mongoengine", "SQLAlchemy"]

[tool.poetry.group.dev.dependencies]
nox = "^2022.11.21"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
